# brainly_moderation_dashboard_api

./: .gitignore  Dockerfile  manage.py  pyproject.toml  requirements.txt
apps/achievements/: apps.py  models.py
apps/achievements/migrations/: 0001_initial.py
apps/authentication/: apps.py  models.py
apps/authentication/migrations/: 0001_initial.py
apps/challenges/: apps.py  models.py
apps/competitions/: apps.py  models.py  urls.py  views.py
apps/competitions/migrations/: 0001_initial.py
apps/competitions/templates/: base.html  index.html
apps/moderator_holidays/: apps.py  models.py  urls.py
apps/moderator_holidays/migrations/: 0001_initial.py
apps/moderators/: models.py  serializers.py  urls.py  views.py
apps/moderators/migrations/: 0001_initial.py
apps/rankings/: models.py  urls.py  views.py
apps/rankings/migrations/: 0001_initial.py  0002_compress_hypertables.py
apps/reported_content_stats/: apps.py  models.py
apps/reported_content_stats/migrations/: 0001_initial.py  0002_compress_hypertables.py
apps/teams/: models.py  urls.py  views.py
apps/teams/migrations/: 0001_initial.py
apps/tenures/: apps.py  models.py
apps/thanks/: apps.py  models.py
apps/thanks/migrations/: 0001_initial.py
dashboard_api/: asgi.py  settings.py  urls.py  wsgi.py
dashboard_api/config/: __init__.py  enums.py  privileges.py  util.py
external_services/brainly_api/: __init__.py  graphql.py
locale/en/LC_MESSAGES/: django.mo  django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
locale/uk/LC_MESSAGES/: django.mo  django.po
